Fixed bug where cogwheel wasn't being shown for updates Update readme, still needs updated images and description for all the buttons in the file menu.